<resources>
    <string name="app_name">SecureSMS</string>
    <string name="add_contact">Add Contact</string>
    <string name="new_msg">New Message</string>
    <string name="history">History</string>
    <string name="to">To:</string>
    <string name="yours_key">Yours key:</string>
    <string name="write_sec_msg">Write your secret message here</string>
    <string name="send">Send</string>
    <string name="contact_name">Contact name</string>
    <string name="phone_number">Phone number</string>
    <string name="secret">Secret</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_phone_number">given phone number is invalid</string>
    <string name="invalid_key">The key must have at least 5 characters or greater</string>
    <string name="invalid_contact_name">Contact name cannot be empty</string>
    <string name="contact_exist">Contact already exist</string>
    <string name="contacts">Contacts</string>
    <string name="new_sms_from">"new sms from "</string>
    <string name="your_conversation_with">Your conversation with</string>
    <string name="_48">+48</string>
    <string name="me">Me</string>
    <string name="unknown">Unknown</string>
</resources>
